<resources>
    <string name="app_name">Animal World</string>
    <string name="title_home">Home</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_news">News</string>
    <string name="retry">Retry</string>
    <string name="something_wrong">Oops.. something went wrong!</string>
    <string name="no_data">Breeds not found.</string>
    <string name="image_detail">Image Detail</string>
    <string name="title">Cat Breeds</string>
    <string name="science">Felis Catus</string>
    <string name="breeds_name">Maine Coon</string>
    <string name="category">Category</string>
    <string name="ras">Breeds</string>
    <string name="country">Country</string>
    <string name="general_information">General Information</string>
    <string name="temperament">Temperament</string>
    <string name="explore">Explore</string>
    <string name="the_animals">The Animals</string>
    <string name="hint">Search Animal Breeds</string>
    <string name="search">search</string>
    <string name="back_button">back_button</string>
    <string name="cat_logo">cat Logo</string>
    <string name="animal_world">Animal World</string>
    <string name="how">Search breeds such as \'beng\', \'aby..\'</string>
    <string name="no_favorite">No Favorite</string>
    <string name="not_supported">Sorry this feature isn\'t supported on your device</string>
    <string name="empty_breeds">You have no favorite breeds.</string>

</resources>