<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".detail.DetailActivity"
    tools:ignore="Overdraw">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/shape_detail">

            <ProgressBar
                android:id="@+id/progress_bar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|top"
                android:indeterminate="true"
                android:indeterminateTint="@color/dark_grey"
                android:visibility="gone"
                android:indeterminateTintMode="src_atop"
                app:layout_constraintBottom_toBottomOf="@+id/img_detail"
                app:layout_constraintEnd_toEndOf="@+id/img_detail"
                app:layout_constraintStart_toStartOf="@+id/img_detail"
                app:layout_constraintTop_toTopOf="@+id/img_detail" />

            <include
                android:id="@+id/view_error"
                layout="@layout/view_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/img_detail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btn_retry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:visibility="gone"
                android:text="@string/retry"
                app:layout_constraintEnd_toEndOf="@+id/view_error"
                app:layout_constraintStart_toStartOf="@+id/view_error"
                app:layout_constraintTop_toBottomOf="@+id/view_error" />

            <com.smarteist.autoimageslider.SliderView
                android:id="@+id/img_detail"
                android:layout_width="match_parent"
                android:layout_height="380dp"
                android:contentDescription="@string/image_detail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:sliderIndicatorAnimationDuration="300"
                app:sliderIndicatorMarginBottom="30dp"
                app:sliderIndicatorSelectedColor="@color/orange" />

            <TextView
                android:id="@+id/tv_animal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/title"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_detail" />

            <View
                android:id="@+id/view3"
                android:layout_width="match_parent"
                android:layout_height="0.8dp"
                android:layout_marginLeft="39dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="39dp"
                android:background="#C8C8C8"
                app:layout_constraintTop_toBottomOf="@+id/tv_science" />

            <ImageView
                android:id="@+id/img_Favorite"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="16dp"
                android:contentDescription="@string/no_favorite"
                android:src="@drawable/ic_baseline_favorite_border_24"
                app:layout_constraintBottom_toBottomOf="@+id/tv_science"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.821"
                app:layout_constraintStart_toEndOf="@+id/tv_animal"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/tv_science"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/science"
                android:textAlignment="center"
                android:textColor="#6D6D6D"
                android:textSize="14sp"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="@+id/tv_animal"
                app:layout_constraintStart_toStartOf="@+id/tv_animal"
                app:layout_constraintTop_toBottomOf="@+id/tv_animal" />

            <TextView
                android:id="@+id/tv_title_ras"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="37dp"
                android:text="@string/ras"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/view3" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="37dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_ras"
                tools:text="@string/ras" />

            <TextView
                android:id="@+id/tv_title_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="37dp"
                android:text="@string/country"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/tv_name" />

            <TextView
                android:id="@+id/tv_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="37dp"
                app:layout_constraintTop_toBottomOf="@id/tv_title_country"
                tools:text="@string/country" />

            <TextView
                android:id="@+id/tv_title_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="37dp"
                android:text="@string/general_information"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/tv_temperament" />

            <TextView
                android:id="@+id/tv_Description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="37dp"
                android:paddingBottom="32dp"
                app:layout_constraintTop_toBottomOf="@id/tv_title_description"
                tools:text="@string/general_information" />

            <TextView
                android:id="@+id/tv_title_temperament"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="37dp"
                android:text="@string/temperament"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/tv_country" />

            <TextView
                android:id="@+id/tv_temperament"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="37dp"
                app:layout_constraintTop_toBottomOf="@id/tv_title_temperament"
                tools:text="@string/temperament" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:theme="@style/Theme.Capstones.AppBarOverlay"
        app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Theme.Capstones.PopupOverlay">

            <ImageView
                android:id="@+id/btn_back"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/back_button"
                android:src="@drawable/back_arrow" />


        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>