<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".home.HomeFragment">


    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape"
        android:elevation="0dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        app:elevation="0dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="128dp"
            android:fitsSystemWindows="true"
            app:layout_scrollFlags="scroll">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="36dp"
                android:layout_marginTop="26dp"
                android:layout_marginRight="36dp"
                android:text="@string/explore"
                android:textColor="@color/white_200"
                android:textSize="36sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="36dp"
                android:layout_marginTop="75dp"
                android:layout_marginRight="36dp"
                android:text="@string/the_animals"
                android:textColor="@color/white_200"
                android:textSize="36sp" />


        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <View
                android:id="@+id/search_view"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="36dp"
                android:layout_marginRight="97dp"
                android:background="@drawable/shape_search"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:text="@string/hint"
                android:textColor="@color/search_color"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/search_view"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="RtlHardcoded" />

            <ImageView
                android:layout_width="19dp"
                android:layout_height="19dp"
                android:layout_marginRight="8dp"
                android:contentDescription="@string/search"
                android:src="@drawable/ic_baseline_search_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/search_view"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="RtlHardcoded" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        android:scrollbars="none"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="24dp"
                android:text="@string/category"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:overScrollMode="never"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_category"
                app:spanCount="4"
                tools:itemCount="8"
                tools:listitem="@layout/item_category" />

            <TextView
                android:id="@+id/tv_animal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="28dp"
                android:layout_marginRight="24dp"
                android:text="@string/title"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/view" />



            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="9dp"
                android:layout_marginTop="8dp"
                android:background="@color/soft_grey"
                app:layout_constraintBottom_toTopOf="@+id/tv_animal"
                app:layout_constraintTop_toBottomOf="@+id/rv_category"
                tools:layout_editor_absoluteX="0dp" />

            <com.mikelau.views.shimmer.ShimmerRecyclerViewX
                android:id="@+id/shimmer_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_animal"
                android:overScrollMode="never"
                app:shimmer_demo_layout="@layout/layout_demo_grid"
                app:shimmer_demo_layout_manager_type="grid"
                app:shimmer_demo_shimmer_color="#21ffffff" />


            <include
                android:id="@+id/view_error"
                layout="@layout/view_error"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@+id/shimmer_recycler_view"
                app:layout_constraintStart_toStartOf="@+id/shimmer_recycler_view"
                app:layout_constraintTop_toTopOf="@+id/shimmer_recycler_view" />

            <Button
                android:id="@+id/btn_retry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/retry"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@+id/view_error"
                app:layout_constraintStart_toStartOf="@+id/view_error"
                app:layout_constraintTop_toBottomOf="@+id/view_error" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>

