<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.gauravk.bubblenavigation.BubbleNavigationConstraintView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey"
        android:elevation="10dp"
        android:padding="8dp"
        app:bnc_mode="spread"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.gauravk.bubblenavigation.BubbleToggleView
            android:id="@+id/btn_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:bt_active="true"
            app:bt_colorActive="@color/white_200"
            app:bt_colorInactive="@color/purple_700"
            app:bt_icon="@drawable/ic_home_black_24dp"
            app:bt_shape="@drawable/bubble_navigation_bg"
            app:bt_title="@string/title_home"
            app:layout_constraintEnd_toStartOf="@+id/btn_favorite"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/bottom_navigation" />

        <com.gauravk.bubblenavigation.BubbleToggleView
            android:id="@+id/btn_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:bt_active="false"
            app:bt_colorActive="@color/white_200"
            app:bt_colorInactive="@color/purple_700"
            app:bt_icon="@drawable/ic_baseline_favorite_bottom"
            app:bt_shape="@drawable/bubble_navigation_bg"
            app:bt_title="@string/title_favorite"
            app:layout_constraintEnd_toStartOf="@+id/btn_news"
            app:layout_constraintStart_toEndOf="@+id/btn_home"
            app:layout_constraintTop_toTopOf="@id/bottom_navigation" />

        <com.gauravk.bubblenavigation.BubbleToggleView
            android:id="@+id/btn_news"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:bt_active="false"
            app:bt_colorActive="@color/white_200"
            app:bt_colorInactive="@color/purple_700"
            app:bt_icon="@drawable/ic_baseline_newspaper_24"
            app:bt_shape="@drawable/bubble_navigation_bg"
            app:bt_title="@string/title_news"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_favorite"
            app:layout_constraintTop_toTopOf="@id/bottom_navigation" />

    </com.gauravk.bubblenavigation.BubbleNavigationConstraintView>


    <FrameLayout
        android:id="@+id/nav_host_fragment_activity_main"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>